Fixed title text expanding out of screen

--- a/portfolio-site/src/Components/Landing/landing.scss
+++ b/portfolio-site/src/Components/Landing/landing.scss
@@ -38,7 +38,7 @@
 
         & div.title-wrapper{
             // Sizing
-            min-width: 24rem;
+            min-width: 20rem;
 
             // Positioning
             position: absolute;
@@ -49,11 +49,12 @@
             & h1{
                 // Font
                 font-size: 5rem;
+                line-height: 1;
             }
 
             & h2{
                 // Font
-                font-size: 2.5rem;
+                font-size: 1.5rem;
             }
 
             & *{
